syntax = "proto3";
package PlayStructures;

message Action{
    string Action = 1;
}