syntax = "proto3";
package TemperatureStructures;

message Temperature{
	string Tool = 1;
	int32 Temp = 2;
	int32 Target = 3;
}